objects/Annual_Pricing_Item__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Pricing__c</fullName>
        <label>Annual Pricing</label>
        <referenceTo>Annual_Pricing__c</referenceTo>
        <relationshipLabel>Annual Pricing Items</relationshipLabel>
        <relationshipName>Annual_Pricing_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending 1st line Approval</fullName>
                </value>
                <value>
                    <fullName>Pending 2nd line Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Price_VAT_Incl__c</fullName>
        <formula>IF(ISNUMBER(Final_Price__c), TEXT(VALUE(Final_Price__c) * 1.14), Final_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price VAT Incl.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <label>Final Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Line_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Line Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Deal_Product_Name__c</fullName>
        <formula>Pricing_Deal_Product__r.Pricing_Deal_Product_Name__c</formula>
        <label>Pricing Deal Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Deal_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Deal Product</label>
        <referenceTo>Pricing_Deal_Product__c</referenceTo>
        <relationshipLabel>Annual Pricing Items</relationshipLabel>
        <relationshipName>Annual_Pricing_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <formula>Pricing_Deal_Product__r.Pricing_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Pricing_Deal_Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Pricing_Deal_Product__r.Product_Type__c)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Comments__c</fullName>
        <label>Request Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Line_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Line Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Pricing_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <formula>Standard_Pricing__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Pricing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Standard Pricing</label>
        <referenceTo>Standard_Pricing__c</referenceTo>
        <relationshipLabel>Annual Pricing Items</relationshipLabel>
        <relationshipName>Annual_Pricing_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_VAT_Inclusive__c</fullName>
        <formula>Pricing_Deal_Product__r.Pricing_Group__r.VAT_Inclusive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>IF(Approval_Required__c, 
  CASE(Approval_Status__c, 
    &apos;Approved&apos;, IMAGE(&quot;/resource/IMG_Status_Approved&quot;, &quot;Green&quot;, 16, 16), 
    &apos;Rejected&apos;, IMAGE(&quot;/resource/IMG_Status_Rejected&quot;, &quot;Red&quot;, 16, 16),
    IMAGE(&quot;/resource/IMG_Status_Pending&quot;, &quot;Yellow&quot;, 16, 16)
  ), 
  &apos;&apos;
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <formula>IF(ISNUMBER(Final_Price__c), TEXT(VALUE(Final_Price__c) * 0.14), &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Annual Pricing Item</label>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>Annual Pricing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Pricing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Incorrect_Value_of_Standard_Pricing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Standard_Pricing__c)), OR(Standard_Pricing__r.Pricing_Template__c &lt;&gt; Annual_Pricing__r.Pricing_Template__c,  Standard_Pricing__r.Pricing_Deal_Product__c &lt;&gt; Pricing_Deal_Product__c))</errorConditionFormula>
        <errorDisplayField>Standard_Pricing__c</errorDisplayField>
        <errorMessage>Incorrect value</errorMessage>
    </validationRules>
</CustomObject>